# myosu

./: .dockerignore  .gitignore  AGENTS.md  ARCHIVED.md  CHANGELOG.md  COMPLETED.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  INVARIANTS.md  LEARNINGS.md  OS-v2.md  OS.md  PROMPT_build.md  README.md  REVIEW.md  SECURITY.md  SPEC.md  THEORY.MD  Untitled.ipynb  WORKFLOW.md  WORKLIST.md  checkpoint.json  data.py  design.md  docker-compose.yml  fabro.toml  graph.fabro  loop_streamed.sh  main.py  manifest.json  methods.py  metrics.py  parse_stream.js  project.yaml  pyproject.toml  runner.py  sandbox.json
crates/myosu-chain/: Cargo.toml
crates/myosu-chain-client/: Cargo.toml
crates/myosu-chain-client/examples/: fund_account.rs
crates/myosu-chain-client/src/: lib.rs
crates/myosu-chain/common/: Cargo.toml
crates/myosu-chain/common/src/: currency.rs  lib.rs
crates/myosu-chain/node/: Cargo.toml
crates/myosu-chain/node/src/: benchmarking.rs  cli.rs  client.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
crates/myosu-chain/node/src/chain_spec/: devnet.rs  finney.rs  localnet.rs  mod.rs  testnet.rs
crates/myosu-chain/node/src/consensus/: aura_consensus.rs  babe_consensus.rs  consensus_mechanism.rs
crates/myosu-chain/node/tests/: stage0_local_loop.rs
crates/myosu-chain/pallets/admin-utils/: Cargo.toml
crates/myosu-chain/pallets/admin-utils/src/: benchmarking.rs  lib.rs
crates/myosu-chain/pallets/commitments/src/: types.rs
crates/myosu-chain/pallets/drand/: Cargo.toml
crates/myosu-chain/pallets/game-solver/: Cargo.toml
crates/myosu-chain/pallets/game-solver/rpc/: Cargo.toml
crates/myosu-chain/pallets/game-solver/runtime-api/: Cargo.toml
crates/myosu-chain/pallets/game-solver/src/: benchmarks.rs  (+4 more)
crates/myosu-chain/pallets/subtensor/: Cargo.toml
crates/myosu-chain/pallets/swap/: Cargo.toml
crates/myosu-chain/pallets/swap-interface/: Cargo.toml
crates/myosu-chain/pallets/transaction-fee/: Cargo.toml
crates/myosu-chain/primitives/safe-math/: Cargo.toml
crates/myosu-chain/primitives/share-pool/: Cargo.toml
crates/myosu-chain/runtime/: Cargo.toml  build.rs
crates/myosu-chain/runtime-common/: Cargo.toml
crates/myosu-chain/runtime-common/src/: lib.rs
crates/myosu-chain/runtime/src/: chain_spec.rs  check_nonce.rs  lib.rs  migrations.rs  sudo_wrapper.rs  transaction_payment_wrapper.rs
crates/myosu-chain/src/: lib.rs
crates/myosu-chain/support/macros/: Cargo.toml
crates/myosu-chain/support/tools/: Cargo.toml
crates/myosu-games/: Cargo.toml  README.md
crates/myosu-games-canonical/: Cargo.toml
crates/myosu-games-canonical/examples/: canonical_manifest.rs  canonical_snapshot.rs  play_against_strategy.rs  promotion_manifest.rs
crates/myosu-games-canonical/src/: lib.rs  playtrace.rs  policy.rs
crates/myosu-games-canonical/src/games/: backgammon.rs  cribbage.rs  gin_rummy.rs  hanafuda.rs  mahjong.rs  mod.rs  ofc.rs  poker_like.rs  shedding.rs  stratego.rs  trick_taking.rs
crates/myosu-games-canonical/tests/: promotion_manifest.rs
crates/myosu-games-kuhn/: Cargo.toml
crates/myosu-games-kuhn/examples/: bootstrap_query.rs  bootstrap_roundtrip.rs
crates/myosu-games-kuhn/src/: game.rs  lib.rs  protocol.rs  renderer.rs  solver.rs  wire.rs
crates/myosu-games-liars-dice/: Cargo.toml  README.md
crates/myosu-games-liars-dice/examples/: bootstrap_query.rs  bootstrap_roundtrip.rs  liars_dice_policy_bundle.rs  strength_roundtrip.rs
crates/myosu-games-liars-dice/src/: dossier.rs  edge.rs  encoder.rs  game.rs  info.rs  lib.rs  policy_bundle.rs  profile.rs  protocol.rs  renderer.rs  solver.rs  turn.rs  wire.rs
crates/myosu-games-poker/: Cargo.toml  README.md
crates/myosu-games-poker/examples/: benchmark_scenario_pack.rs  bootstrap_artifacts.rs  bootstrap_roundtrip.rs  bootstrap_scenario_pack.rs  import_robopoker_lookup.rs  quality_benchmark.rs  strength_roundtrip.rs
crates/myosu-games-poker/src/: action.rs  artifacts.rs  benchmark.rs  codexpoker.rs  exploit.rs  lib.rs  lookup_dump.rs  query.rs  renderer.rs  request.rs  robopoker.rs  solver.rs  state.rs  test_support.rs  training.rs  truth_stream.rs  wire.rs
crates/myosu-games-portfolio/: Cargo.toml
crates/myosu-games-portfolio/examples/: bootstrap_checkpoint.rs  bootstrap_manifest.rs  bootstrap_query.rs  bootstrap_roundtrip.rs  bootstrap_validate.rs  core_manifest.rs  core_roundtrip.rs  engine_latency_budget.rs  engine_quality_budget.rs  strength_manifest.rs  strength_query.rs  strength_roundtrip.rs  strength_validate.rs
crates/myosu-games-portfolio/src/: cards.rs  combinatorics.rs  engine.rs  game.rs  lib.rs  protocol.rs  quality.rs  renderer.rs  rng.rs  rollout.rs  solver.rs  state.rs  wire.rs
crates/myosu-games-portfolio/src/core/: backgammon.rs  cribbage.rs  gin_rummy.rs  hanafuda.rs  liars_dice.rs  mahjong.rs  mod.rs  model.rs  ofc.rs  poker_like.rs  shedding.rs  stratego.rs  trick_taking.rs
crates/myosu-games-portfolio/src/engines/: backgammon.rs  cribbage.rs  gin_rummy.rs  hanafuda.rs  mahjong.rs  mod.rs  ofc.rs  poker_like.rs  shedding.rs  stratego.rs  trick_taking.rs
crates/myosu-games-portfolio/src/eval/: meld.rs  mod.rs  poker.rs  trick_taking.rs
crates/myosu-games/src/: canonical.rs  lib.rs  registry.rs  traits.rs
crates/myosu-keys/: Cargo.toml
crates/myosu-keys/src/: lib.rs  main.rs  storage.rs
crates/myosu-play/: Cargo.toml
crates/myosu-play/src/: blueprint.rs  cli.rs  discovery.rs  lib.rs  live.rs  main.rs  spectate.rs  training.rs
crates/myosu-play/tests/: invariants.rs
crates/myosu-sdk/: Cargo.toml
crates/myosu-sdk/src/: lib.rs
crates/myosu-sdk/src/register/: mod.rs  tests.rs
crates/myosu-sdk/src/scaffold/: mod.rs  templates.rs  tests.rs
crates/myosu-sdk/src/testing/: convergence.rs  game_valid.rs  mod.rs  tests.rs
crates/myosu-tui/: Cargo.toml
crates/myosu-tui/src/: events.rs  input.rs  lib.rs  pipe.rs  renderer.rs  schema.rs  screens.rs  shell.rs  theme.rs
crates/myosu-tui/src/screens/: mod.rs  spectate.rs
crates/myosu-validator/: Cargo.toml
crates/myosu-validator/src/: chain.rs  cli.rs  lib.rs  main.rs  validation.rs
(+1384 files in other folders)
