[workspace]
resolver = "2"
members = [
    "crates/myosu-games",
    "crates/myosu-games-poker",
    "crates/myosu-tui",
    "crates/myosu-chain/pallets/game-solver",  # Stage 0: Core pallet (CF-06)
    # "crates/myosu-chain",      # Stage 1: Substrate chain fork
    # "crates/myosu-miner",      # Stage 4: Miner binary
    # "crates/myosu-validator",   # Stage 4: Validator binary
    # "crates/myosu-play",       # Stage 5: Gameplay CLI
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/happybigmtn/myosu"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
futures = "0.3"
tokio-test = "0.4"
rbp-nlhe = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef" }
rbp-mccfr = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef" }
