[package]
name = "myosu-games-poker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NLHE poker engine integration surface for the myosu game-solving chain"

[lib]
crate-type = ["lib"]

[dependencies]
# Robopoker NLHE implementation (git at same rev as myosu-games)
rbp-nlhe = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef", features = ["serde"] }
rbp-mccfr = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef", features = ["serde"] }

# myosu-games traits
myosu-games = { path = "../myosu-games" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Error handling
thiserror = { workspace = true }

# I/O
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
