[package]
name = "myosu-games-poker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Poker state and TUI integration surfaces for myosu"

[lib]
crate-type = ["lib"]

[dependencies]
myosu-games = { path = "../myosu-games" }
myosu-tui = { path = "../myosu-tui" }
bincode = "1.3"
rbp-cards = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef" }
rbp-gameplay = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef" }
rbp-mccfr = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef" }
rbp-nlhe = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
sha2.workspace = true
ratatui = { workspace = true }
thiserror = { workspace = true }
memmap2.workspace = true

[dev-dependencies]
proptest = "1"
