[package]
name = "myosu-games"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Game engine trait abstraction and implementations for the myosu game-solving chain"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
