[package]
name = "myosu-games"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Game engine trait abstraction and implementations for the myosu game-solving chain"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

# Robopoker dependencies - local path during fork development
# TODO: Switch to git dependency once happybigmtn/robopoker fork is published
rbp-core = { path = "/home/r/coding/robopoker/crates/util" }
rbp-mccfr = { path = "/home/r/coding/robopoker/crates/mccfr" }

[dev-dependencies]
tokio-test = { workspace = true }
