[package]
name = "myosu-games"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Game engine trait abstraction and implementations for the myosu game-solving chain"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
hex = { workspace = true, features = ["alloc"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

# Robopoker dependencies
rbp-core = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef" }
rbp-mccfr = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef" }

[dev-dependencies]
proptest = "1"
tokio-test = { workspace = true }
