[package]
name = "myosu-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Developer SDK for implementing and registering games on myosu"

[lib]
crate-type = ["lib"]

[features]
default = []
tui = ["myosu-tui"]

[dependencies]
myosu-games = { path = "../myosu-games" }
myosu-tui = { path = "../myosu-tui", optional = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# External dependencies needed for test harness and scaffold
tempfile = "3"

[dev-dependencies]
rbp-mccfr = { git = "https://github.com/happybigmtn/robopoker", rev = "04716310143094ab41ec7172e6cea5a2a66744ef" }
