[package]
name = "myosu-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
