[package]
name = "myosu-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
